--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sanity/client": "^7.2.1",
+    "@sanity/image-url": "^1.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
@@ -22,6 +24,8 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "react-router-dom": "^7.6.0",
+    "sass": "^1.88.0",
     "vite": "^6.3.5"
   }
 }
